@@ -61,6 +61,9 @@ RELEASE 0.06 -
 
   - Add PDF and PostScript document builders.
 
+  - Add support for compiling Fortran programs from a variety of
+    suffixes (a la GNU Make):  .f, .F, .for, .FOR, .fpp and .FPP
+
   From Steve Leblanc:
 
   - Add support for the -U option.
